Add testModulePath() to Tester class